force-app/main/default/objects/LLC_BI__Context__mdt/LLC_BI__Context__mdt.object-meta.xml
<CustomObject>
    <description>This object is used to give context to an SObjectField and it&apos;s associated SObjectType.</description>
    <label>Context</label>
    <pluralLabel>Contexts</pluralLabel>
</CustomObject>