force-app/main/default/objects/LLC_BI__Context__mdt/fields/LLC_BI__Field_Set_API_Name__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Field_Set_API_Name__c</fullName>
    <description>This optional field contains an API name of a field set.</description>
    <inlineHelpText>A field set used for the SObjectType.</inlineHelpText>
    <label>Field Set API Name</label>
    <length>60</length>
    <type>Text</type>
</CustomField>