force-app/main/default/objects/LLC_BI__Context__mdt/fields/LLC_BI__SObjectField__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__SObjectField__c</fullName>
    <description>This optional field contains an API name to a SObjectField.</description>
    <inlineHelpText>A SObjectField to be used in conjunction with it&apos;s associated SObjectType.</inlineHelpText>
    <label>SObjectField</label>
    <length>40</length>
    <type>Text</type>
</CustomField>