force-app/main/default/objects/LLC_BI__Context__mdt/fields/LLC_BI__SObjectType__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__SObjectType__c</fullName>
    <description>This optional field contains an API name to a SObjectType.</description>
    <inlineHelpText>A SObjectType used to determine describe the type of the associated SObjectField.</inlineHelpText>
    <label>SObjectType</label>
    <length>40</length>
    <type>Text</type>
</CustomField>